--- a/Blogs.html
+++ b/Blogs.html
@@ -289,7 +289,7 @@ img.c {
                                       <img src="Images\gold.jpg" alt="Paris" style="width:100%;height:100%">
                                     </div>
                                     <div class="flip-box-back">
-                                      <img src="C:\KIM_HTML\Images\chal.jpg" alt="Paris" style="width:100%;height:100%">
+                                      <img src="Images\chal.jpg" alt="Paris" style="width:100%;height:100%">
                                       
                                     </div>
                                   </div>
